changes for handle message from chatbot and recieve in lwc

--- a/force-app/main/default/lwc/customChatBot/customChatbot.css
+++ b/force-app/main/default/lwc/customChatBot/customChatbot.css
@@ -13,7 +13,7 @@
 
  .EndUser {
    background-color: #005290;
-   color: white;
+   color: black;
    margin-left: auto;
    padding: 0.5em;
    border-radius: 10px 10px 0 10px;
